<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="description_logo">LoadSensing</string>

    <!-- GLOBALES -->
    <string name="app_name">LoadSensingApp</string>
    <string name="pantalla_espera_title">Por favor espere...</string>
    <string name="error">Error</string>
    <string name="guion">" - "</string>

    <!-- LOGIN layout -->
    <string name="iniciando_sesion">Iniciando sessión</string>
    <string name="error_login">Nombre de usuario o contraseña incorrectos</string>
    <string name="error_no_internet">No hay ninguna conexión activa</string>
    <string name="username">Nombre de usuario</string>
    <string name="username_hint">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="remember_user_password">Recordar usuario y contraseña</string>
    <string name="idioma_es">Español</string>
    <string name="idioma_en">Inglés</string>
    <string name="login">Iniciar sesión</string>
    <string name="empty_fields">Tiene que informar el nombre de usuario y contraseña</string>        

    <!-- HOME layout -->
    <string name="title_home">Home</string>
    <string name="title_feature1">Listado de Redes</string>
    <string name="title_feature2">Localización de Redes</string>
    <string name="title_feature3">Localización de sensores</string>
    <string name="title_feature4">Lectura QR-CODE</string>
    <string name="title_feature5">Listado de Sensores</string>
    <string name="title_feature6">Información de Sensor</string>
    <string name="title_grafic">Gráfico</string>
    <string name="title_about">Acerca de</string>
    <string name="description_about">Acerca de</string>
    <string name="description_home">Home</string>
    <string name="description_back">Atrás</string>
    <string name="description_search">Buscar</string>
    <string name="description_feature1">Listado de Redes</string>
    <string name="description_feature2">Localización de Redes</string>
    <string name="description_feature3">Localización de sensores</string>
    <string name="description_feature4">Lectura QR-CODE</string>

    <!-- Llista de xarxes -->
    <string name="numero_sensors">"Número de sensores: "</string>

    <!-- Llista de xarxes -->
    <string name="tipus_sensor">"Tipo de sensor: "</string>
    <string name="descripcio">"Descripción: "</string>
    <string name="poblacio">"Población: "</string>

    <!-- Single Sensor Layout -->
    <string name="sensor">"Sensor: "</string>
    <string name="nombre_sensor">"Nombre sensor: "</string>
    <string name="num_serie">"Núm. serie: "</string>
    <string name="ultima_mesura">"Última medida: "</string>
    <string name="unitat_mesura">"Unidad de medida: "</string>
    <string name="max_load">"Valor máximo: "</string>
    <string name="max_load_unit">"Unidad valor máximo: "</string>
    <string name="sensibilitat">"Sensibilidad: "</string>
    <string name="unitat_sensibilitat">"Unidad de sensibilidad: "</string>
    <string name="offset">"Offset: "</string>
    <string name="unitat_offset">"Unidad de offset: "</string>
    <string name="alarm_at">"Alarma a: "</string>
    <string name="unitat_alarma">"Unidad de alarma: "</string>
    <string name="data_ultima_mida">"Fecha última medida: "</string>
    <string name="canal">"Canal: "</string>
    <string name="tipus">"Tipo: "</string>
    <string name="nom">"Nombre: "</string>
    <string name="graph">Mostrar gráfico</string>

    <!-- ABOUT -->
    <string name="about_intro">Esta aplicación captura información de redes de sensores sin hilos. Está creada por David Garcia i Jose Antonio Gómez.</string>

    <!-- MENU -->
    <string name="logout">Desconectar</string>
    <string name="preferences">Preferencias</string>
    <string name="exit">Salir</string>

    <!-- PREFERENCES -->
    <string name="configuration">Configuración</string>
    <string name="autologin">Login automático</string>
    <string name="autologin_description">Permite loginarse automáticamente con el usuario y password recordado.</string>
    <string name="location">Idioma</string>
    <string name="location_description">Idioma utilizado en la aplicación</string>
    <string name="preference_set">Preferencia establecida</string>
    <string name="choose_language">Elige idioma</string>
    <string name="about">Acerca de</string>
    <string name="about_description">Conoce a los creadores de la app</string>
    
        <!-- QR -->
            <string name="press_exit">Vuelva a iniciar la actividad.</string>

</resources>