<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
<LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>
    <com.google.android.maps.MapView
        android:id="@+id/mapa"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="0gPVYwxzMqvoHIyzbq1ZRBnFVVkzXdG4jfhZ_Mw"
        android:clickable="true" />

</LinearLayout>
<!--
JOSE
android:apiKey="0gPVYwxzMqvoHIyzbq1ZRBnFVVkzXdG4jfhZ_Mw"
-->
<!-- 
DAVID
android:apiKey="0Fh_e0DswBeAOUv3tUHVwf6Sfr-1FD0t-uPhP_Q"
 -->