<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="@+string/title_feature6" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_back"
            android:onClick="goBack"
            android:src="@drawable/title_back" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sensor_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/sensor" />

        <TextView
            android:id="@+id/sensor"
            style="@style/SingleSensorValue" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sensorname_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/nombre_sensor" />

        <TextView
            android:id="@+id/sensorname"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/serialnumber_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/num_serie" />

        <TextView
            android:id="@+id/serialnumber"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/measure_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/ultima_mesura" />

        <TextView
            android:id="@+id/measure"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/measureunit_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/unitat_mesura" />

        <TextView
            android:id="@+id/measureunit"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/maxload_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/max_load" />

        <TextView
            android:id="@+id/maxload"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/maxloadunit_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/max_load_unit" />

        <TextView
            android:id="@+id/maxloadunit"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sensitivity_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/sensibilitat" />

        <TextView
            android:id="@+id/sensitivity"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sensitivityunit_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/unitat_sensibilitat" />

        <TextView
            android:id="@+id/sensitivityunit"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/offset_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/offset" />

        <TextView
            android:id="@+id/offset"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/offsetunit_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/unitat_offset" />

        <TextView
            android:id="@+id/offsetunit"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/alarmat_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/alarm_at" />

        <TextView
            android:id="@+id/alarmat"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/alarmAtunit_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/unitat_alarma" />

        <TextView
            android:id="@+id/alarmAtunit"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lasttare_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/data_ultima_mida" />

        <TextView
            android:id="@+id/lasttare"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/canal_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/canal" />

        <TextView
            android:id="@+id/canal"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tipus_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/tipus" />

        <TextView
            android:id="@+id/tipus"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/descripcio_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/descripcio" />

        <TextView
            android:id="@+id/descripcio"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/poblacio_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/poblacio" />

        <TextView
            android:id="@+id/poblacio"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/nom_text"
            style="@style/SingleSensorLabel"
            android:text="@+string/nom" />

        <TextView
            android:id="@+id/nom"
            style="@style/SingleSensorValue" />
    </LinearLayout>

    <Button
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/grafic_default"
        android:onClick="graph"
        android:text="@string/graph" />

</LinearLayout>